<resources>
    <string name="app_name">Guess The Car Brand App</string>
    <string name="app_hello">Угадай название автомобиля</string>
    <string name="choose_country">Выбери страну производитель \n У тебя будет 10 попыток</string>
    <string name="choose">Выбор</string>
    <string name="start_play">НАЧАТЬ</string>
    <string name="button">Button</string>
    <string name="car_brand">Логотип автомобиля</string>
    <string name="usa">США</string>
    <string name="germany">Германия</string>
    <string name="france">Франция</string>
    <string name="great_britain">Великобритания</string>
    <string name="usa_flag">Флаг США</string>
    <string name="germany_flag">Флаг Германии</string>
    <string name="france_flag">Флаг Франции</string>
    <string name="great_britain_flag">Флаг Великобритании</string>
    <string name="right_answers">Правильных ответов:</string>
    <string name="number">0</string>
    <string name="wrong_answers">Неправильных ответов:</string>
    <string name="back_to_start">ВЕРНУТЬСЯ К НАЧАЛУ</string>
</resources>