<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/app_hello"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FF0000"/>

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/choose_country"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonStart"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChoose">

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usa"
            android:textSize="20sp"
            android:checked="true"
            android:buttonTint="@color/red"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:onClick="onClickChooseCountry"/>

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/germany"
            android:textSize="20sp"
            android:buttonTint="@color/red"
            android:onClick="onClickChooseCountry"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/france"
            android:textSize="20sp"
            android:buttonTint="@color/red"
            android:onClick="onClickChooseCountry"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/great_britain"
            android:textSize="20sp"
            android:buttonTint="@color/red"
            android:onClick="onClickChooseCountry"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:onClick="onClickStartGame"
        android:text="@string/start_play"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/imageViewUSA"
        android:contentDescription="@string/usa_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textViewChoose"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGermany"
        app:srcCompat="@drawable/united_states" />

    <ImageView
        android:id="@+id/imageViewGermany"
        android:contentDescription="@string/germany_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUSA"
        app:layout_constraintBottom_toTopOf="@+id/imageViewFrance"
        app:srcCompat="@drawable/germany" />

    <ImageView
        android:id="@+id/imageViewFrance"
        android:contentDescription="@string/france_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGermany"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGreatBritain"
        app:srcCompat="@drawable/france" />

    <ImageView
        android:id="@+id/imageViewGreatBritain"
        android:contentDescription="@string/great_britain_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFrance"
        app:srcCompat="@drawable/great_britain" />

</androidx.constraintlayout.widget.ConstraintLayout>